force-app/main/default/objects/Property__c/fields/Acq_Costs_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Acq_Costs_Paid_at_Closing__c</fullName>
    <description>Gives the acquisition cost paid at Closing</description>
    <formula>Pipeline_Record__r.Acq_Costs_Paid_at_Closing__c</formula>
    <label>Acq Costs Paid at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>