force-app/main/default/objects/Property__c/fields/Acq_Source__c.field-meta.xml
<CustomField>
    <fullName>Acq_Source__c</fullName>
    <description>Source of the acquisition</description>
    <formula>Text(Prospect_Record__r.Acq_Source__c)</formula>
    <inlineHelpText>Source of the acquisition</inlineHelpText>
    <label>Acq Source</label>
    <type>Text</type>
</CustomField>