force-app/main/default/objects/Property__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>Gives the Acquisition date</description>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>