force-app/main/default/objects/Property__c/fields/Actual_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rehab_Complete_Date__c</fullName>
    <formula>Initial_Rehab_ID__r.Actual_Rehab_Complete_Date__c</formula>
    <label>Actual Rehab Complete Date</label>
    <type>Date</type>
</CustomField>