force-app/main/default/objects/Property__c/fields/Address_Record__c.field-meta.xml
<CustomField>
    <fullName>Address_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Property address record</description>
    <label>Address Record</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>