force-app/main/default/objects/Property__c/fields/All_in_Basis__c.field-meta.xml
<CustomField>
    <fullName>All_in_Basis__c</fullName>
    <formula>Initial_Rehab_Estimate__c + Final_Offer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All in Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>