force-app/main/default/objects/Property__c/fields/Approved_Change_Order_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Order_1_Amount__c</fullName>
    <formula>Inspection_Record__r.Approved_Change_Order_1_Amount__c</formula>
    <label>Approved Change Order #1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>