force-app/main/default/objects/Property__c/fields/Approved_Change_Order_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Order_1_Date__c</fullName>
    <formula>Inspection_Record__r.Approved_Change_Order_1_Date__c</formula>
    <label>Approved Change Order #1 Date</label>
    <type>Date</type>
</CustomField>