force-app/main/default/objects/Property__c/fields/Approved_Change_Order_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Order_2_Amount__c</fullName>
    <label>Approved Change Order #2 Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>