force-app/main/default/objects/Property__c/fields/Approved_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Order__c</fullName>
    <formula>(Approved_Change_Order_1_Amount__c +  Approved_Change_Order_2_Amount__c ) / Work_Authorization_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Change Order %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>