force-app/main/default/objects/Property__c/fields/Assessment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Amount__c</fullName>
    <formula>Pipeline_Record__r.Assessment_Amount__c</formula>
    <label>Assessment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>