force-app/main/default/objects/Property__c/fields/Assessment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Due_Date__c</fullName>
    <formula>Pipeline_Record__r.Assessment_Due_Date__c</formula>
    <label>Assessment Due Date</label>
    <type>Date</type>
</CustomField>