force-app/main/default/objects/Property__c/fields/Avg_time_from_Prospect_to_Property__c.field-meta.xml
<CustomField>
    <fullName>Avg_time_from_Prospect_to_Property__c</fullName>
    <formula>CreatedDate  -  Prospect_Record__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg time from Prospect to Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>