force-app/main/default/objects/Property__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <description>Gives the number of baths</description>
    <formula>Prospect_Record__r.Baths__c</formula>
    <label>Baths</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>