force-app/main/default/objects/Property__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <description>Gives the number of bedrooms</description>
    <formula>Prospect_Record__r.Bed__c</formula>
    <label>Bed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>