force-app/main/default/objects/Property__c/fields/Bid_Recommendation_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Bid_Recommendation_Contingency__c</fullName>
    <formula>Inspection_Record__r.Bid_Recommendation_Contingency__c</formula>
    <label>Bid Recommendation + Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>