force-app/main/default/objects/Property__c/fields/Busy_Street__c.field-meta.xml
<CustomField>
    <fullName>Busy_Street__c</fullName>
    <description>Checked if the Property has busy street</description>
    <formula>Prospect_Record__r.Has_Busy_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busy Street</label>
    <type>Checkbox</type>
</CustomField>