force-app/main/default/objects/Property__c/fields/Cancel_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Notice_Date__c</fullName>
    <label>Cancel Notice Date</label>
    <type>Date</type>
</CustomField>