force-app/main/default/objects/Property__c/fields/Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cap_Rate__c</fullName>
    <formula>NOI__c /  All_in_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cap Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>