force-app/main/default/objects/Property__c/fields/Closing_Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Received_Date__c</fullName>
    <description>Gives the Closing docs received date</description>
    <formula>Pipeline_Record__r.Closing_Docs_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Docs Received Date</label>
    <type>Date</type>
</CustomField>