force-app/main/default/objects/Property__c/fields/Closing_Property_Tax_Prorates__c.field-meta.xml
<CustomField>
    <fullName>Closing_Property_Tax_Prorates__c</fullName>
    <description>Gives the Closing Property Tax Prorates</description>
    <label>Closing Property Tax Prorates</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>