force-app/main/default/objects/Property__c/fields/Closing_Statement_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Contract_Price__c</fullName>
    <description>Gives the Contract Price at Closing</description>
    <formula>Pipeline_Record__r.Closing_Statement_Contract_Price__c</formula>
    <label>Closing Statement Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>