force-app/main/default/objects/Property__c/fields/Closing_Statement_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Deposit__c</fullName>
    <description>Gives the Closing deposit</description>
    <formula>Pipeline_Record__r.Closing_Statement_Deposit__c</formula>
    <label>Closing Statement Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>