force-app/main/default/objects/Property__c/fields/Closing_Statement_Property_Tax_Prorates__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Property_Tax_Prorates__c</fullName>
    <description>Gives the Property Tax Prorates at Closing</description>
    <formula>Pipeline_Record__r.Closing_Statement_Property_Tax_Prorates__c</formula>
    <label>Closing Statement Property Tax Prorates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>