force-app/main/default/objects/Property__c/fields/Closing_Statement_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Settlement_Date__c</fullName>
    <description>Gives the Closing Settlement Date</description>
    <formula>Pipeline_Record__r.Closing_Statement_Settlement_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Statement Settlement Date</label>
    <type>Date</type>
</CustomField>