force-app/main/default/objects/Property__c/fields/Confirm_Heat_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Heat_Fuel_Type__c</fullName>
    <description>Gives the Heat Fuel Type</description>
    <label>Confirm Heat Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>