force-app/main/default/objects/Property__c/fields/Confirm_Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Roof_Type__c</fullName>
    <label>Confirm Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>