force-app/main/default/objects/Property__c/fields/Confirm_Sewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Sewer_Type__c</fullName>
    <description>Gives the Sewer type</description>
    <label>Confirm Sewer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sewer</fullName>
            </value>
            <value>
                <fullName>Septic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>