force-app/main/default/objects/Property__c/fields/Dollar_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Dollar_per_Day__c</fullName>
    <formula>Total_Commitment_to_Date__c /   Total_Rehab_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollar ($) per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>