force-app/main/default/objects/Property__c/fields/Dollar_Variance_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Variance_to_Budget__c</fullName>
    <formula>Bid_Recommendation_Contingency__c - Total_Commitment_to_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dollar ($) Variance to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>