force-app/main/default/objects/Property__c/fields/Estimate_Roof_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Roof_Age_Years__c</fullName>
    <description>Gives the roof age in years</description>
    <label>Estimate Roof Age (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>