force-app/main/default/objects/Property__c/fields/File_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Link__c</fullName>
    <label>File Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>