force-app/main/default/objects/Property__c/fields/Final_Offer__c.field-meta.xml
<CustomField>
    <fullName>Final_Offer__c</fullName>
    <formula>Prospect_Record__r.Final_Offer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>