force-app/main/default/objects/Property__c/fields/Financing_Source__c.field-meta.xml
<CustomField>
    <fullName>Financing_Source__c</fullName>
    <label>Financing Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>