force-app/main/default/objects/Property__c/fields/Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>Flood_Zone__c</fullName>
    <description>Gives the Flood zone details</description>
    <formula>TEXT(Prospect_Record__r.Flood_Zone__c )</formula>
    <label>Flood Zone</label>
    <type>Text</type>
</CustomField>