force-app/main/default/objects/Property__c/fields/Foundation_Evidence_of_Previous_Repair__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Evidence_of_Previous_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is an evidence of previous repair</description>
    <label>Foundation - Evidence of Previous Repair</label>
    <type>Checkbox</type>
</CustomField>