force-app/main/default/objects/Property__c/fields/Frequency_of_the_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_the_Assessment__c</fullName>
    <formula>TEXT(Pipeline_Record__r.Frequency_of_the_Assessment__c)</formula>
    <label>Frequency of the Assessment</label>
    <type>Text</type>
</CustomField>