force-app/main/default/objects/Property__c/fields/Funds_Due_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Funds_Due_from_Buyer__c</fullName>
    <description>Gives Funds due from buyer</description>
    <formula>Pipeline_Record__r.Funds_Due_from_Buyer__c</formula>
    <label>Funds Due from Buyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>