force-app/main/default/objects/Property__c/fields/Gas_Meter_and_Serial__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter_and_Serial__c</fullName>
    <description>Gives Gas meter and serial number</description>
    <label>Gas Meter and Serial #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>