force-app/main/default/objects/Property__c/fields/Gas_Provider__c.field-meta.xml
<CustomField>
    <fullName>Gas_Provider__c</fullName>
    <description>Gives the Gas provider name</description>
    <label>Gas Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>