force-app/main/default/objects/Property__c/fields/Gate_Comment__c.field-meta.xml
<CustomField>
    <fullName>Gate_Comment__c</fullName>
    <formula>Pipeline_Record__r.Gate_Comment__c</formula>
    <label>Gate Comment</label>
    <type>Text</type>
</CustomField>