force-app/main/default/objects/Property__c/fields/Gate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Gate_Phone__c</fullName>
    <formula>Pipeline_Record__r.Gate_Phone__c</formula>
    <label>Gate Phone</label>
    <type>Text</type>
</CustomField>