force-app/main/default/objects/Property__c/fields/Gate_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Gate_Y_N__c</fullName>
    <formula>Pipeline_Record__r.Gate_Y_N__c</formula>
    <label>Gate Y/N</label>
    <type>Checkbox</type>
</CustomField>