force-app/main/default/objects/Property__c/fields/General_Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Name__c</fullName>
    <formula>Inspection_Record__r.General_Contractor__r.Name</formula>
    <label>General Contractor Name</label>
    <type>Text</type>
</CustomField>