force-app/main/default/objects/Property__c/fields/Gross_Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rental_Income__c</fullName>
    <description>Gross rental income is the total rental income generated by a property before any deductions for expenses, such as operating expenses, vacancy costs, or capital expenditures.</description>
    <formula>Rent__c + Other_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Rental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>