force-app/main/default/objects/Property__c/fields/Has_Pool__c.field-meta.xml
<CustomField>
    <fullName>Has_Pool__c</fullName>
    <description>Tells if the property has pool</description>
    <formula>Prospect_Record__r.Pool__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Pool</label>
    <type>Checkbox</type>
</CustomField>