force-app/main/default/objects/Property__c/fields/Has_Septic__c.field-meta.xml
<CustomField>
    <fullName>Has_Septic__c</fullName>
    <description>Checked if Septic type</description>
    <formula>Prospect_Record__r.Has_Septic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Septic</label>
    <type>Checkbox</type>
</CustomField>