force-app/main/default/objects/Property__c/fields/Heavy_Industry__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Industry__c</fullName>
    <description>Checked if it has Heavy Industry</description>
    <formula>Prospect_Record__r.Has_Heavy_Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heavy Industry</label>
    <type>Checkbox</type>
</CustomField>