force-app/main/default/objects/Property__c/fields/HOA_Company__c.field-meta.xml
<CustomField>
    <fullName>HOA_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the HomeOwner Association name</description>
    <label>HOA Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>