force-app/main/default/objects/Property__c/fields/HOA_Gate_Code__c.field-meta.xml
<CustomField>
    <fullName>HOA_Gate_Code__c</fullName>
    <formula>Pipeline_Record__r.Gate_Code__c</formula>
    <inlineHelpText>HOA Gate Code</inlineHelpText>
    <label>Gate Code</label>
    <type>Text</type>
</CustomField>