force-app/main/default/objects/Property__c/fields/HOA_Name_UW__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name_UW__c</fullName>
    <description>Gives the HOA name at Underwriting</description>
    <formula>Prospect_Record__r.HOA_Name_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Name @ UW</label>
    <type>Text</type>
</CustomField>