force-app/main/default/objects/Property__c/fields/HOA_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>HOA_Not_Applicable__c</fullName>
    <formula>Pipeline_Record__r.HOA_Not_Applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Not Applicable</label>
    <type>Checkbox</type>
</CustomField>