force-app/main/default/objects/Property__c/fields/HOA_Y_N__c.field-meta.xml
<CustomField>
    <fullName>HOA_Y_N__c</fullName>
    <description>Checked if the property has HOA</description>
    <formula>Prospect_Record__r.HOA_YN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA (Y/N)</label>
    <type>Checkbox</type>
</CustomField>