force-app/main/default/objects/Property__c/fields/HVAC_Type__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Type__c</fullName>
    <description>Gives the HVAC type</description>
    <label>HVAC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>