force-app/main/default/objects/Property__c/fields/Initial_BPO_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_BPO_Value__c</fullName>
    <label>Initial BPO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>