force-app/main/default/objects/Property__c/fields/Initial_Rehab_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Estimate__c</fullName>
    <formula>Prospect_Record__r.Initial_Rehab_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Rehab Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>