force-app/main/default/objects/Property__c/fields/Inspection_Record__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inspection record related to the Property.</description>
    <label>Inspection Record</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Property</relationshipLabel>
    <relationshipName>Property</relationshipName>
    <type>Lookup</type>
</CustomField>