force-app/main/default/objects/Property__c/fields/Leaseback__c.field-meta.xml
<CustomField>
    <fullName>Leaseback__c</fullName>
    <formula>Pipeline_Record__r.Leaseback__c</formula>
    <label>Leaseback</label>
    <type>Checkbox</type>
</CustomField>