force-app/main/default/objects/Property__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <description>Gives the lot square feet number</description>
    <formula>Prospect_Record__r.Lot_SqFt__c</formula>
    <label>Lot Sq/Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>