force-app/main/default/objects/Property__c/fields/Market_Value_UW__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_UW__c</fullName>
    <description>Gives the market value at Underwriting</description>
    <formula>Prospect_Record__r.Market_Value_UW__c</formula>
    <label>Market Value @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>