force-app/main/default/objects/Property__c/fields/Monthly_HOA_UW__c.field-meta.xml
<CustomField>
    <fullName>Monthly_HOA_UW__c</fullName>
    <description>Gives the monthly HOA fee at Underwriting</description>
    <formula>IF(ISBLANK(Prospect_Record__r.Actual_Monthly_HOA_UW__c),Prospect_Record__r.Monthly_HOA_UW__c,Prospect_Record__r.Actual_Monthly_HOA_UW__c)</formula>
    <label>Monthly HOA @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>