force-app/main/default/objects/Property__c/fields/Move_In_Inspection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Inspection_Notes__c</fullName>
    <label>Move-In Inspection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>