force-app/main/default/objects/Property__c/fields/Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Date__c</fullName>
    <label>Target Move Out Date</label>
    <type>Date</type>
</CustomField>