force-app/main/default/objects/Property__c/fields/NOI__c.field-meta.xml
<CustomField>
    <fullName>NOI__c</fullName>
    <formula>Gross_Rental_Income__c - Operating_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>