force-app/main/default/objects/Property__c/fields/Occupancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status__c</fullName>
    <label>Occupancy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Occupied No Notice</fullName>
            </value>
            <value>
                <fullName>Vacant Rented Not Ready</fullName>
            </value>
            <value>
                <fullName>Vacant Rented Ready</fullName>
            </value>
            <value>
                <fullName>Vacant Unrented Not Ready</fullName>
            </value>
            <value>
                <fullName>Vacant Unrented Ready</fullName>
            </value>
            <value>
                <fullName>Notice Unrented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>