force-app/main/default/objects/Property__c/fields/Operating_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Operating_Expenses__c</fullName>
    <label>Operating Expenses</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>