force-app/main/default/objects/Property__c/fields/Operating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Operating_Reason__c</fullName>
    <label>Operating Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New REO</fullName>
            </value>
            <value>
                <fullName>Pending Foreclosure Eviction</fullName>
            </value>
            <value>
                <fullName>Pre-Renovation</fullName>
            </value>
            <value>
                <fullName>Renovation Started</fullName>
            </value>
            <value>
                <fullName>Reno Complete (Pending List)</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Sale Pre-listed</fullName>
            </value>
            <value>
                <fullName>Listed for Sale</fullName>
            </value>
            <value>
                <fullName>Under Contract</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Listed for Rent</fullName>
            </value>
            <value>
                <fullName>Holding Fee Rcvd</fullName>
            </value>
            <value>
                <fullName>Turnover</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Flow Transfer to RCM</fullName>
            </value>
            <value>
                <fullName>Transfer to RCM</fullName>
            </value>
            <value>
                <fullName>Transfer from RCM to HHM</fullName>
            </value>
            <value>
                <fullName>Transfer to MPH</fullName>
            </value>
            <value>
                <fullName>Transfer from MPH to HHM</fullName>
            </value>
            <value>
                <fullName>Transfer back to CHL</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Re-characterized</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Unauthorized Occupant</fullName>
            </value>
            <value>
                <fullName>Trustee Occupant</fullName>
            </value>
            <value>
                <fullName>Trustee Leased</fullName>
            </value>
            <value>
                <fullName>Transfer Inspection</fullName>
            </value>
            <value>
                <fullName>Transfer Repairs</fullName>
            </value>
            <value>
                <fullName>Post Renovation Transfer Inspection</fullName>
            </value>
            <value>
                <fullName>Post Renovation Transfer Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>