force-app/main/default/objects/Property__c/fields/Other_Costs_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs_Paid_at_Closing__c</fullName>
    <description>Gives Other costs paid at Closing</description>
    <formula>Pipeline_Record__r.Other_Costs_Paid_at_Closing__c</formula>
    <label>Other Costs Paid at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>